==> Yaochenger/RT-Thread-Source-Notes/【2】驱动源码注释/ADC/驱动/drv_adc.c <==
/*
 * Copyright (c) 2006-2018, RT-Thread Development Team
 *
 * SPDX-License-Identifier: Apache-2.0
 *
 * Change Logs:
 * Date           Author       Notes
 * 2021-09-09     WCH        the first version
 */

#include <board.h>
#include <rtthread.h>
#include <rtdevice.h>
#include "drv_adc.h"
#if defined(BSP_USING_ADC1) || defined(BSP_USING_ADC2)

//#define DRV_DEBUG
#define LOG_TAG              "drv.adc"
#include <drv_log.h>

/* ADC配置
 * ADC基地址
 * ADC 扫描模式
 * ADC 转换模式
 * ADC 数据对齐模式
 * ADC 通道数量
 * */
static ADC_HandleTypeDef adc_config[] =
{
#ifdef BSP_USING_ADC1
    {                                                                  \
        .Instance                       = ADC1,                        \
        .Init.ADC_Mode                  = ADC_Mode_Independent,        \
        .Init.ADC_ScanConvMode          = DISABLE,                     \
        .Init.ADC_ContinuousConvMode    = DISABLE,                     \
        .Init.ADC_ExternalTrigConv      = ADC_ExternalTrigConv_None,   \
        .Init.ADC_DataAlign             = ADC_DataAlign_Right,         \
        .Init.ADC_NbrOfChannel          = 1,                           \
    },
#endif

#ifdef BSP_USING_ADC2
    {                                                                  \
        .Instance                       = ADC2,                        \
        .Init.ADC_Mode                  = ADC_Mode_Independent,        \
        .Init.ADC_ScanConvMode          = DISABLE,                     \
        .Init.ADC_ContinuousConvMode    = DISABLE,                     \
        .Init.ADC_ExternalTrigConv      = ADC_ExternalTrigConv_None,   \
        .Init.ADC_DataAlign             = ADC_DataAlign_Right,         \
        .Init.ADC_NbrOfChannel          = 1,                           \
    }
#endif
};

/* CH32 ADC设备 */
struct ch32_adc
{
    ADC_HandleTypeDef      ADC_Handler;
    struct rt_adc_device   ch32_adc_device;
};

static struct ch32_adc ch32_adc_obj[sizeof(adc_config) / sizeof(adc_config[0])];

/* ADC使能方法 */
static rt_err_t ch32_adc_enabled(struct rt_adc_device *device, rt_uint32_t channel, rt_bool_t enabled)
{
    ADC_HandleTypeDef *ch32_adc_handler;
    RT_ASSERT(device != RT_NULL);
    /* 强制类型转换 */
    ch32_adc_handler = device->parent.user_data;
    /* 使能对应的ADC */
    if (enabled)
    {
        ADC_Cmd(ch32_adc_handler->Instance, ENABLE);
    }/* 失能对应的ADC */
    else
    {
        ADC_Cmd(ch32_adc_handler->Instance, DISABLE);
    }

    return RT_EOK;
}
/* 获取转换的通道名称 */
static rt_uint32_t ch32_adc_get_channel(rt_uint32_t channel)
{
    rt_uint32_t ch32_channel = 0;

    switch (channel)
    {
    case  0:
        ch32_channel = ADC_Channel_0;
        break;
    case  1:
        ch32_channel = ADC_Channel_1;
        break;
    case  2:
        ch32_channel = ADC_Channel_2;
        break;
    case  3:
        ch32_channel = ADC_Channel_3;
        break;
    case  4:
        ch32_channel = ADC_Channel_4;
        break;
    case  5:
        ch32_channel = ADC_Channel_5;
        break;
    case  6:
        ch32_channel = ADC_Channel_6;
        break;
    case  7:
        ch32_channel = ADC_Channel_7;
        break;
    case  8:
        ch32_channel = ADC_Channel_8;
        break;
    case  9:
        ch32_channel = ADC_Channel_9;
        break;
    case 10:
        ch32_channel = ADC_Channel_10;
        break;
    case 11:
        ch32_channel = ADC_Channel_11;
        break;
    case 12:
        ch32_channel = ADC_Channel_12;
        break;
    case 13:
        ch32_channel = ADC_Channel_13;
        break;
    case 14:
        ch32_channel = ADC_Channel_14;
        break;
    case 15:
        ch32_channel = ADC_Channel_15;
        break;
#ifdef ADC_CHANNEL_16
    case 16:
        ch32_channel = ADC_Channel_16;
        break;
#endif
    case 17:
        ch32_channel = ADC_Channel_17;
        break;
#ifdef ADC_CHANNEL_18
    case 18:
        ch32_channel = ADC_Channel_18;
        break;
#endif
#ifdef ADC_CHANNEL_19
    case 19:
        ch32_channel = ADC_Channel_19;
        break;
#endif
    }

    return ch32_channel;
}
/* 获取转换*/
static rt_err_t ch32_get_adc_value(struct rt_adc_device *device, rt_uint32_t channel, rt_uint32_t *value)
{
    ADC_ChannelConfTypeDef ADC_ChanConf;
    ADC_HandleTypeDef *ch32_adc_handler;

    RT_ASSERT(device != RT_NULL);
    RT_ASSERT(value != RT_NULL);
    /* 强制类型转换 */
    ch32_adc_handler = device->parent.user_data;
    /* 申请空间 */
    rt_memset(&ADC_ChanConf, 0, sizeof(ADC_ChanConf));

#ifndef ADC_CHANNEL_16
    if (channel == 16)
    {
        LOG_E("ADC channel must not be 16.");
        return -RT_ERROR;
    }
#endif

/* ADC channel number is up to 17 */
    /* 获取通道值 */
    if (channel <= 17)
    {
        /* set ch32 ADC channel */
        ADC_ChanConf.Channel =  ch32_adc_get_channel(channel);
    }
    else
    {
        return -RT_ERROR;
    }
    /* 该通道的转换顺序 */
    ADC_ChanConf.Rank = 1;
    /* 转换周期 */
    ADC_ChanConf.SamplingTime = ADC_SampleTime_239Cycles5;
    /* 配置ADC的采样顺序 与 采样时间 */
    ADC_RegularChannelConfig(ch32_adc_handler->Instance,ADC_ChanConf.Channel , ADC_ChanConf.Rank, ADC_ChanConf.SamplingTime );
    /* 软件启动转换 */
    ADC_SoftwareStartConvCmd(ch32_adc_handler->Instance, ENABLE);
    /* 等待转换 */
    while(!ADC_GetFlagStatus(ch32_adc_handler->Instance, ADC_FLAG_EOC ));
    /* 获取ADC的转换值  */
    *value = (rt_uint32_t)ADC_GetConversionValue(ch32_adc_handler->Instance);
    /* 清除转换结束标志 */
    ADC_ClearFlag( ch32_adc_handler->Instance, ADC_FLAG_EOC);

    return RT_EOK;
}

/* CH32 ADC方法 */
static const struct rt_adc_ops ch32_adc_ops =
{
    .enabled = ch32_adc_enabled,
    .convert = ch32_get_adc_value,
};
/* CH32 ADC初始化函数 */
static int ch32_adc_init(void)
{
    int result = RT_EOK;
    /* save adc name */
    char name_buf[5] = {'a', 'd', 'c', '0', 0};
    int i = 0;
    /* 周期初始化 ADC*/
    for (i = 0; i < sizeof(adc_config) / sizeof(adc_config[0]); i++)
    {
        /* ADC 初始化  */
        name_buf[3] = '0';
        ch32_adc_obj[i].ADC_Handler = adc_config[i];
#if defined(ADC1)
        if (ch32_adc_obj[i].ADC_Handler.Instance == ADC1)
        {
            name_buf[3] = '1';
            /* 初始化ADC1的时钟 */
            RCC_APB2PeriphClockCmd(RCC_APB2Periph_ADC1, ENABLE );
        }
#endif
#if defined(ADC2)
        if (ch32_adc_obj[i].ADC_Handler.Instance == ADC2)
        {
            name_buf[3] = '2';
            /* 初始化ADC2的时钟 */
            RCC_APB2PeriphClockCmd(RCC_APB2Periph_ADC2, ENABLE );
        }
#endif
        {/* 初始化ADC1的参数配置  */
            ADC_Init(ch32_adc_obj[i].ADC_Handler.Instance,&ch32_adc_obj[i].ADC_Handler.Init );
            /* 注册ADC设备  */
            if (rt_hw_adc_register(&ch32_adc_obj[i].ch32_adc_device, name_buf, &ch32_adc_ops, &ch32_adc_obj[i].ADC_Handler) == RT_EOK)
            {
                LOG_D("%s init success", name_buf);
            }
            else
            {
                LOG_E("%s register failed", name_buf);
                result = -RT_ERROR;
            }
        }
    }

    return result;
}
INIT_DEVICE_EXPORT(ch32_adc_init);

#endif /* BSP_USING_ADC */
